# chinese-chess

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.json  justfile  pyproject.toml
.cargo/: config.toml
.cursor/plans/: datagen_major_refactor_1a36dff6.plan.md
.cursor/skills/debug-torch-import-macos/: SKILL.md
.cursor/skills/document-diagram/: SKILL.md
.cursor/skills/run-gpu-pipeline/: SKILL.md
config/: gpu.json  local.json
crates/: Cargo.toml
crates/arena/: Cargo.toml
crates/arena/src/: eval.rs  main.rs  match_play.rs  openings.rs  tests.rs
crates/core/: Cargo.toml
crates/core/benches/: encode.rs  engine.rs  mcts.rs
crates/core/examples/: profile_mcts.rs
crates/core/src/: config.rs  encode.rs  lib.rs  mcts.rs  model_io.rs  selfplay.rs
crates/core/src/engine/: constants.rs  game.rs  position.rs  types.rs
crates/core/src/infer/: actor.rs  mod.rs  torch_model.rs
crates/core/tests/: encoding.rs  rules.rs  search.rs
crates/datagen/: Cargo.toml
crates/datagen/src/: bootstrap.rs  cli.rs  main.rs  pipeline.rs
crates/play_gui/: Cargo.toml
crates/play_gui/src/: main.rs
data/arena/: openings.json
datagen/: Cargo.toml
datagen/crates/encoder/: Cargo.toml
datagen/crates/encoder/src/: lib.rs
datagen/crates/encoder/tests/: differential.rs  encoding.rs
datagen/crates/engine/: Cargo.toml
datagen/crates/engine/src/: game.rs  lib.rs  position.rs  types.rs
datagen/crates/engine/tests/: differential.rs  rules.rs
datagen/crates/engine/tests/fixtures/: engine.json
datagen/crates/inference/: Cargo.toml
datagen/crates/inference/src/: lib.rs  torch_model.rs
datagen/crates/inference/tests/: differential.rs  torch_forward.rs
datagen/crates/mcts/: Cargo.toml
datagen/crates/mcts/src/: lib.rs
datagen/crates/mcts/tests/: differential.rs  search.rs
datagen/crates/store/: Cargo.toml
datagen/crates/store/src/: lib.rs
datagen/src/: config.rs  data.rs  evaluator.rs  inference.rs  lib.rs  main.rs  selfplay.rs
docs/: algorithm.mdc  chess-rule.mdc  encode.mdc  fen.mdc  mcts.mdc  pipeline-protocol.md  policy-value-net.mdc  train.mdc  中国象棋规则（参考亚规）.mdc
docs/ai/: document-diagram.md  document-writing-style.md
docs/algorithm/: 01-mcts-cnn.mdc  02-implementation.mdc
docs/diagrams/: activations.drawio  backprop.drawio  batchnorm.drawio  board-to-tensor.drawio  conv2d.drawio  datagen-train-pipeline.drawio  dual-head.drawio  gradient-descent.drawio  init.drawio  linear-neuron.drawio  loss.drawio  mcts-node.drawio  mcts-overview.drawio  policy-value-net-overview.drawio  residual-block.drawio  tensor-channels.drawio
engine/: Cargo.toml
engine/src/: attack.rs  board.rs  constants.rs  encode.rs  evaluate.rs  game.rs  lib.rs  mcts.rs  move_gen.rs  types.rs  zobrist.rs
engine/tests/: encoding.rs  rules.rs  search.rs
play_gui/: Cargo.toml
play_gui/src/: config.rs  evaluator.rs  main.rs
scripts/: run-with-log.sh
shared/: model-format.md  run-config.schema.json  shard-format.md
src/: config.py  encoder.py  engine.py  evaluator.py  inference_server.py  mcts.py  network.py  pipeline.py  replay.py  selfplay.py  train.py
src/chinese_check.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_rules.py
trainer/: pyproject.toml
trainer/scripts/: arena_daemon.py  dump_fixtures.py  dump_torch_fixture.py  export_initial_model.py  export_run_config.py  train_loop.py
trainer/src/: config.py  export_model.py  loader.py  loop.py  main.py  model_io.py  network.py  replay.py  shard_io.py  train.py
trainer/src/chinese_chess_trainer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
trainer/src/trainer/: config.py  exporter.py  loader.py  loop.py  model_io.py  network.py  replay.py  shard_io.py  store.py  train.py
trainer/src/trainer/reference/: encoder.py  engine.py  evaluator.py  inference_server.py  mcts.py  pipeline.py  selfplay.py
trainer/tests/: test_exporter.py  test_loader.py  test_model_io.py  test_rules.py  test_shard_io.py  test_store.py
