[project]
name = "chinese-check"
version = "0.1.0"
description = "PyTorch MCTS + CNN core for Xiangqi self-play experiments."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
