[workspace]
resolver = "2"
members = [
    "core",
    "datagen",
    "arena",
    "play_gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_distr = "0.4"
rayon = "1"
safetensors = "0.4"
anyhow = "1"
tch = "0.24"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }

[profile.release]
debug = true
