[workspace]
resolver = "2"
members = [
    "crates/engine",
    "crates/encoder",
    "crates/mcts",
    "crates/inference",
    "crates/store",
    "bin/selfplay",
    "bin/arena",
    "bin/play_gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_distr = "0.4"
rayon = "1"
safetensors = "0.4"
anyhow = "1"
