[package]
name = "play_gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "play_gui"
path = "src/main.rs"

[dependencies]
engine = { workspace = true }

ort = "2.0.0-rc.12"
ndarray = "0.17"

eframe = "0.33"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

rand = { workspace = true }
rand_distr = { workspace = true }

tokio = { version = "1", features = ["rt"] }

anyhow = "1"
log = "0.4"
env_logger = "0.11"
