[project]
name = "chinese-chess-trainer"
version = "0.1.0"
description = "PyTorch training + orchestration for Chinese chess AlphaZero self-play."
requires-python = ">=3.10"
dependencies = [
    "numpy<2",
    "torch>=2.11,<2.12",
    "safetensors",
]

[tool.uv.sources]
# macOS uses the default PyPI torch wheel; Windows GPU machines use PyTorch's
# CUDA 12.6 wheel index so `uv run`/`uv sync` will not replace it with CPU torch.
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

# hatchling 后端：可编辑安装用 .pth 指向 src/，不在源码树里生成 egg-info。
[tool.hatch.build.targets.wheel]
packages = ["src/trainer"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
