[project]
name = "chinese-chess-trainer"
version = "0.1.0"
description = "PyTorch training + orchestration for Chinese chess AlphaZero self-play."
requires-python = ">=3.10"
dependencies = [
    "numpy<2",
    "torch>=2.11,<2.12",
    "safetensors",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

# hatchling 后端：可编辑安装用 .pth 指向 src/，不在源码树里生成 egg-info。
[tool.hatch.build.targets.wheel]
packages = ["src/trainer"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
