[project]
name = "chinese-chess-trainer"
version = "0.1.0"
description = "PyTorch training + orchestration for Chinese chess AlphaZero self-play."
requires-python = ">=3.10"
dependencies = [
    "numpy<2",
    "torch>=2.11,<2.12",
    "onnx",
    "onnxscript",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# 默认索引使用国内镜像（清华 TUNA），加速 numpy/onnx/onnxscript/pytest 等下载。
[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

# PyTorch index routing: CUDA 12.8 on Linux, CPU/MPS from PyPI on macOS.
# For Linux CPU-only, override with: UV_TORCH_BACKEND=cpu uv sync
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
