[package]
name = "arena"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "arena"
path = "src/main.rs"

[dependencies]
cc_core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
tch = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
