[package]
name = "cc_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
safetensors = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
tch = { workspace = true }
log = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "engine"
harness = false

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "mcts"
harness = false
