[package]
name = "datagen"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "datagen"
path = "src/main.rs"

[dependencies]
cc_core = { path = "../core" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
tch = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
