[package]
name = "play_gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "play_gui"
path = "src/main.rs"

[dependencies]
cc_core = { path = "../core" }
anyhow = { workspace = true }
rand = { workspace = true }
tch = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
eframe = "0.33.3"
log = { workspace = true }
env_logger = { workspace = true }
