[package]
name = "store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
engine = { path = "../engine" }
serde = { workspace = true }
serde_json = { workspace = true }
safetensors = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
